tests/interp/bad/bad-arc.small.imperial.center-format.ngc
;Radius to end of arc differs from radius to start: start=(X0.0000,Y0.0000) center=(X0.0033,Y0.0000) end=(X0.0040,Y0.0000) r1=0.0033 r2=0.0007 abs_err=0.0026 rel_err=78.7879%
;
; There are two components to the radius error tolerance for center-format
; arcs.  The "absolute error" is the difference between the radius at the
; starting point and the radius at the ending point.  The "relative error"
; is the absolute error divided by the maximum arc radius.
;
; An arc fails the radius tolerance test if either of these conditions is
; true:
;     * The absolute error is greater than 2 * 0.001 * sqrt(2) inches, or
;     * The relative error is greater than 0.75 (75%)
;

g20
f1
g0x0y0z0
g2 x0.0040 y0 i0.0033
